# mlsfs

./: README.md  environment.yml  inference.py  pyproject.toml  submit_train.sh  train.py  train_dp.py
config/: Notes.txt  SFNO_era5.yaml  SFNO_era5_aws.yaml  SFNO_era5_azure.yaml  SFNO_era5_num15.yaml  SFNO_era5_num23.yaml  SFNO_ufs.yaml
data/: mean_by_level_1979-2016.nc  std_by_level_1979-2016.nc
mlsfs/models/: __init__.py  layers.py  sfnonet.py
mlsfs/utils/: data_loader.py  grids.py  img_utils.py  losses.py  tisr.py  weighted_acc_rmse.py
scripts/: cal_stats_era5_from_weatherbench.py  cal_tisr.py  get_forcing.py  get_zarr_from_gc.py  reorder_stats.py  sbatch_run.sh  stats_notes.txt
scripts/era5/: cal_stats_era5_to_nc.py  get_stats_from_nc.py  get_zarr_from_gs.py
scripts/ufs_replay/: fv3dataset.py  get_data_to_zarr_init.py  get_data_to_zarr_slurm.py  get_mom6_zarr_from_gc.py  submit_getdata.sh
